--- a/Classes/class-03/initial-template/pages/titles/lib/index.css
+++ b/Classes/class-03/initial-template/pages/titles/lib/index.css
@@ -628,20 +628,19 @@ a {
     background-color: #616161;
 }
 
-.card:hover .overlay,
-.card.active .overlay {
-    display: flex;
-    background-image: linear-gradient(to right,
-            rgba(51, 51, 51, 0.95),
-            rgba(255, 255, 255, 0.01));
-}
-
-/* .card .overlay {
+/* .card:hover .overlay, .card.active .overlay{
     display: flex;
     background-image: linear-gradient(to right,
             rgba(51, 51, 51, 0.95),
             rgba(255, 255, 255, 0.01));
 } */
+
+.card .overlay {
+    display: flex;
+    background-image: linear-gradient(to right,
+            rgba(51, 51, 51, 0.95),
+            rgba(255, 255, 255, 0.01));
+}
 
 .overlay p {
     color: #bdbdbd;
@@ -1189,12 +1188,12 @@ a {
 }
 
 #hands {
-    /* faz com que elementos possam ser clicaveis*/
+    /* faz com que elementos possam ser clicavel */
     pointer-events: none;
 
-    /*faz ficar em cima dos elementos*/
+    /* faz ficar em cima dos elementos */
     position: fixed;
 
-    /*fica à frente dos elementos */
+    /* fica à frente dos elementos */
     z-index: 2;
 }
